--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,6 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import '../node_modules/antd/dist/antd.css';
+
+body{
+    background-color: rgb(184, 179, 171);
+}
