--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,7 @@
 @import '../node_modules/antd/dist/antd.css';
 
 body{
-    background-color: rgb(184, 179, 171);
+    overflow: hidden;
+    background-color: rgb(248, 187, 137);
+    font-family: 'Courier New', Courier, monospace;
 }
